--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "homepage": "https://github.com/rse/source-code-error",
     "bugs":     "https://github.com/rse/source-code-error/issues",
     "dependencies": {
-        "@babel/code-frame":        "7.0.0-beta.52",
+        "@babel/code-frame":        "7.0.0-rc.1",
         "chalk":                    "2.4.1",
         "strip-ansi":               "4.0.0"
     },
     "devDependencies": {
         "babel-cli":                "6.26.0",
         "babel-preset-es2015":      "6.24.1",
-        "babel-eslint":             "8.2.5",
-        "eslint":                   "5.0.1",
+        "babel-eslint":             "8.2.6",
+        "eslint":                   "5.3.0",
         "eslint-config-standard":   "11.0.0",
         "eslint-plugin-standard":   "3.1.0",
         "eslint-plugin-promise":    "3.8.0",
         "eslint-plugin-import":     "2.13.0",
-        "eslint-plugin-node":       "6.0.1"
+        "eslint-plugin-node":       "7.0.1"
     },
     "engines": {
         "node":                     ">=8.0.0"
