--- a/package.json
+++ b/package.json
@@ -17,20 +17,18 @@
     "homepage": "https://github.com/rse/source-code-error",
     "bugs":     "https://github.com/rse/source-code-error/issues",
     "dependencies": {
-        "@babel/code-frame":        "7.0.0-rc.1",
+        "@babel/code-frame":        "7.0.0",
         "chalk":                    "2.4.1",
-        "strip-ansi":               "4.0.0"
+        "strip-ansi":               "5.0.0"
     },
     "devDependencies": {
-        "babel-cli":                "6.26.0",
-        "babel-preset-es2015":      "6.24.1",
-        "babel-eslint":             "8.2.6",
-        "eslint":                   "5.3.0",
-        "eslint-config-standard":   "11.0.0",
-        "eslint-plugin-standard":   "3.1.0",
-        "eslint-plugin-promise":    "3.8.0",
-        "eslint-plugin-import":     "2.13.0",
-        "eslint-plugin-node":       "7.0.1"
+        "babel-eslint":             "10.0.1",
+        "eslint":                   "5.10.0",
+        "eslint-config-standard":   "12.0.0",
+        "eslint-plugin-standard":   "4.0.0",
+        "eslint-plugin-promise":    "4.0.1",
+        "eslint-plugin-import":     "2.14.0",
+        "eslint-plugin-node":       "8.0.0"
     },
     "engines": {
         "node":                     ">=8.0.0"
