--- a/eslint.yaml
+++ b/eslint.yaml
@@ -1,6 +1,6 @@
 ##
 ##  Source-Code-Error -- Render Error of Source-Code
-##  Copyright (c) 2016-2017 Ralf S. Engelschall <rse@engelschall.com>
+##  Copyright (c) 2018-2019 Dr. Ralf S. Engelschall <rse@engelschall.com>
 ##
 ##  Permission is hereby granted, free of charge, to any person obtaining
 ##  a copy of this software and associated documentation files (the
