--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "url":  "https://github.com/rse/source-code-error.git"
     },
     "author": {
-        "name":  "Ralf S. Engelschall",
+        "name":  "Dr. Ralf S. Engelschall",
         "email": "rse@engelschall.com",
         "url":   "http://engelschall.com"
     },
