--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "node":                     ">=18.0.0"
     },
     "scripts": {
-        "prepublishOnly": "eslint --config eslint.mjs source-code-error.js"
+        "prepublishOnly": "eslint --config eslint.mjs source-code-error.js",
+        "test":           "node sample.js"
     }
 }
